--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2188,7 +2188,8 @@ input, select, textarea {
 /* Banner */
 
 	#banner {
-		background: #CCE8F4 url("../../images/pic01.jpg");
+		/*background: #CCE8F4 url("../../images/pic01.jpg");*/
+		background: #26292b00 url("../../images/CurseEaterCont/CurseEaterBanner.gif");
 		background-position: center center;
 		background-size: auto 100%;
 		background-repeat: no-repeat;
@@ -2199,7 +2200,7 @@ input, select, textarea {
 	}
 
 		#banner header {
-			background-color: rgba(34, 30, 31, 0.98);
+			background-color: rgba(34, 30, 31, 0);
 			display: inline-block;
 			padding: 2.5em 5em;
 			border-radius: 5px;
@@ -3064,7 +3065,7 @@ input, select, textarea {
 	  }
 	  
 	  .UnrealEngine{
-		width:65%;
+		width:85%;
 		animation: UnrealEngine 2s;
 	  }
 
@@ -3340,7 +3341,7 @@ input, select, textarea {
 			width: 0%;
 		  }
 		  100%{
-			width: 65%;
+			width: 85%;
 		  }
 	  }
 
