--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1596,19 +1596,23 @@ input, select, textarea {
 		}
 
 		.box.post header > p {
+			text-align: center;
 			margin-top: 1.25em;
 			font-size: 1.25em;
 		}
 
 		.box footer ul.actions {
+			text-align: center;
 			margin-bottom: 0;
 		}
 
 		.box h3{
+			text-align: center;
 			color:black;
 		}
 
 		.box h2{
+			text-align: center;
 			color:black;
 		}
 
@@ -2744,7 +2748,6 @@ input, select, textarea {
 			}
 
 		/* Actions */
-
 			ul.actions li {
 				margin: 1em 0 0 0;
 				display: block;
@@ -3030,7 +3033,7 @@ input, select, textarea {
 	  }
 	  
 	  .cplusplus{
-		width:75%;
+		width:85%;
 		animation: cplusplus 2s;
 	  }
 	  
@@ -3050,7 +3053,7 @@ input, select, textarea {
 	  }
 	  
 	  .csharp{
-		width:80%;
+		width:90%;
 		animation: Csharp 2s;
 	  }
 	  
@@ -3060,12 +3063,12 @@ input, select, textarea {
 	  }
 
 	  .Unity{
-		width:75%;
+		width:85%;
 		animation: Unity 2s;
 	  }
 	  
 	  .UnrealEngine{
-		width:85%;
+		width:95%;
 		animation: UnrealEngine 2s;
 	  }
 
@@ -3278,7 +3281,7 @@ input, select, textarea {
 			width: 0%;
 		  }
 		  100%{
-			width: 75%;
+			width: 85%;
 		  }
 	  }
 	  
@@ -3323,7 +3326,7 @@ input, select, textarea {
 		  width: 0%;
 		}
 		100%{
-		  width: 80%;
+		  width: 90%;
 		}
 	  }
 
@@ -3332,7 +3335,7 @@ input, select, textarea {
 			width: 0%;
 		  }
 		  100%{
-			width: 75%;
+			width: 85%;
 		  }
 	  }
 
@@ -3341,7 +3344,7 @@ input, select, textarea {
 			width: 0%;
 		  }
 		  100%{
-			width: 85%;
+			width: 95%;
 		  }
 	  }
 
@@ -3465,6 +3468,17 @@ input, select, textarea {
 			opacity:0;
 			border-radius: 10px;
 			background-color: white;
+		}
+		.container /*.content*/ .contentBx h2
+		{
+			color: rgb(0, 0, 0);
+		}
+
+		.container /*.content*/ .contentBx h3
+		{
+			text-align: center;
+			margin: auto;
+			color: rgb(150, 150, 150);
 		}
 
 		.container /*.content*/ .contentBx.active
